--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,40 +1,65 @@
-name: Build macOS App
+name: Build Whisper App
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
-    runs-on: macos-latest
-
+  build-windows:
+    runs-on: windows-latest
     steps:
-      # Sprawdzenie repozytorium
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Zainstalowanie Pythona
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: 3.9
 
-      # Instalowanie zależności
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install pyinstaller
 
-      # Kompilacja aplikacji
-      - name: Build the app
+      - name: Build executable
         run: |
-          pyinstaller --onefile --windowed generate_srt_gui.py
-
-      # Przechowywanie aplikacji jako artefaktu
-      - name: Upload built app
+          pyinstaller --onefile --hidden-import=whisper main.py
+          
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: macOS-app
-          path: dist/*
+          name: windows-app
+          path: dist/main.exe
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install py2app
+
+      - name: Build app
+        run: |
+          py2applet --make-setup main.py
+          python setup.py py2app
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: macos-app
+          path: dist/main.app
